task#76: Message formatter and all log and message revision