@@ -9,16 +9,13 @@ import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
 import jakarta.transaction.TransactionManager;
-import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import static com.cdx.bas.domain.text.MessageConstants.BANK_ACCOUNT_START;
-import static jakarta.transaction.Transactional.TxType.REQUIRED;
+import static com.cdx.bas.domain.message.CommonMessages.*;
 
 /***
  * persistence implementation for BankAccount entities
@@ -28,8 +25,9 @@ import static jakarta.transaction.Transactional.TxType.REQUIRED;
  */
 @ApplicationScoped
 public class BankAccountRepository implements BankAccountPersistencePort, PanacheRepositoryBase<BankAccountEntity, Long> {
-    
+
     private static final Logger logger = LoggerFactory.getLogger(BankAccountRepository.class);
+    public static final String ID_FIELD = "id";
 
     BankAccountMapper bankAccountMapper;
 
@@ -48,9 +46,9 @@ public class BankAccountRepository implements BankAccountPersistencePort, Panach
 
     @Override
     public List<BankAccount> getAll() {
-        return findAll(Sort.by("id")).stream()
-                .map(bankAccountEntity -> bankAccountMapper.toDto(bankAccountEntity))
-                .collect(Collectors.toList());
+        return findAll(Sort.by(ID_FIELD)).stream()
+                .map(bankAccountMapper::toDto)
+                .toList();
     }
 
     @Override
@@ -61,7 +59,7 @@ public class BankAccountRepository implements BankAccountPersistencePort, Panach
     @Override
     public BankAccount create(BankAccount bankAccount) {
         entityManager.persist(bankAccountMapper.toEntity(bankAccount));
-        logger.info(BANK_ACCOUNT_START + bankAccount.getId() + " created");
+        logger.debug(BANK_ACCOUNT_CONTEXT + "{}" + CREATION_ACTION, bankAccount.getId());
         return bankAccount;
     }
 
@@ -72,10 +70,10 @@ public class BankAccountRepository implements BankAccountPersistencePort, Panach
             getEntityManager();
             BankAccountEntity merge = entityManager.merge(entity);
             bankAccount = bankAccountMapper.toDto(merge);
-            logger.info(BANK_ACCOUNT_START + bankAccount.getId() + " updated");
+            logger.debug(BANK_ACCOUNT_CONTEXT + "{}" + UPDATE_ACTION, bankAccount.getId());
             return bankAccount;
         } catch (UnsupportedOperationException exception) {
-            throw new BankAccountException("invalid", exception);
+            throw new BankAccountException(ERROR_UPDATING_ACCOUNT, exception);
         }
     }
     
@@ -85,7 +83,7 @@ public class BankAccountRepository implements BankAccountPersistencePort, Panach
         if (entityOptional.isPresent()) {
             BankAccountEntity entity = entityOptional.get();
             delete(entity);
-            logger.info("BankAccount " + entity.getId() + " deleted");
+            logger.debug(BANK_ACCOUNT_CONTEXT + "{}" + DELETION_ACTION, entity.getId());
             return Optional.of(bankAccountMapper.toDto(entity));
         }
         return Optional.empty();
